[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ipamtool"
version = "0.35.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "textual>=0.50",
    "openpyxl>=3.1",
    "rich>=13.0",
]

[project.scripts]
ipam = "ipam.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ipam*"]
